--- a/source/_posts/激活函数的作用和比较.md
+++ b/source/_posts/激活函数的作用和比较.md
@@ -137,3 +137,31 @@ f(x) = max(0.01x, x)
 $$
 
 但是大部分时候我们还是使用ReLu，很多时候LReLu的表现和ReLu其实相差不多，只有神经元大量坏死，ReLu表现不好的时候，我们才会考虑使用LReLu，甚至更复杂的PReLu和ELU
+
+
+
+### 3.4 GeLU函数
+
+- 其实ReLU的非线性因素在于：**$$P=0.5$$的概率随机使一部分神经元失活**
+- 而GeLU相当于把这个概率分布改为了标准正态分布：
+
+$$
+\operatorname{GELU}(\mathrm{x})=\mathrm{xP}(\mathrm{X}<=\mathrm{x})=\mathrm{x} \Phi(\mathrm{x})
+$$
+
+- GeLU的思想在于：**直观来说，因为一般更大的激活值更加重要，所以我们希望拥有更大激活值的神经元失活的概率小一些，所以采用了累积概率分布来体现这一点**
+
+- 在具体使用中一般不使用标准正态分布，而使用其近似值：
+
+$$
+\operatorname{GELU}(\mathrm{x})=0.5 \mathrm{x}\left(1+\tanh \left[\sqrt{2 / \pi}\left(\mathrm{x}+0.044715 \mathrm{x}^{3}\right)\right]\right)
+$$
+
+- 而BERT的源码中的实现还要简便一些：
+
+```python
+def gelu(input_tensor):
+	cdf = 0.5 * (1.0 + tf.erf(input_tensor / tf.sqrt(2.0)))
+	return input_tesnsor*cdf
+```
+
