add LoRA && QLoRA.md

--- a/source/_posts/常用损失函数和评估模型的指标.md
+++ b/source/_posts/常用损失函数和评估模型的指标.md
@@ -192,8 +192,10 @@ $$
 
 在二分类中我们通常将输出结果用sigmoid映射到区间$(0, 1)$，并将其作为该类的概率，由于只有两类，所以给定$x_i$求出类别为1或0的概率分别为：
 $$
+\begin{gather}
 p(y_i = 1|x_i) = \hat{y_i} \\
 p(y_i = 0|x_i) = 1 - \hat{y_i}
+\end{gather}
 $$
 合并成一个式子：
 $$
@@ -350,8 +352,10 @@ $$
 - 首先介绍真正例率和假正例率：
 
 $$
+\begin{gather}
 TPR = \frac{TP}{TP + FN}, \\
 FPR = \frac{FP}{TN + FP}
+\end{gather}
 $$
 
 - ROC曲线：
@@ -392,6 +396,7 @@ $$
 
 则：
 $$
+\begin{gather}
 AUC = \int_0^1ROC(t)dt \\
 =\int_0^1 [1 - F_X(F_Y^{-1}(1 - t))] dt \\
 =\int_0^1 [1 - F_X(F_Y^{-1}(t))] dt \\
@@ -399,6 +404,7 @@ AUC = \int_0^1ROC(t)dt \\
 =\int_{-\infty}^{+\infty}P(X > y)f_Y(y)dy \\
 =\int_{-\infty}^{+\infty}P(X > y, Y = y)dy \\
 =P(X > Y)
+\end{gather}
 $$
 
 
@@ -407,8 +413,10 @@ $$
 - **AUC的计算方法同时考虑了学习器对于正例和负例的分类能力，在样本不平衡（正负类样本不相同）的情况下，依然能够对分类器做出合理的评价**
 
 $$
+\begin{gather}
 TPR = P(\hat{Y} = 1 | Y = 1), \\
 FPR = P(\hat{Y} = 1 | Y = 0)
+\end{gather}
 $$
 
 **由上式可得：无论Y的真实概率是多少， 都不会影响TPR和FPR**
